--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
 <!DOCTYPE html>
+<html lang="en-us">
+ <head>
+  <meta charset="UTF-8">
+  <title id="title">Micah Clegg | Home</title>
+  <meta name="description" content="Micah Clegg's home page. Web Development and Design">
+  <meta name="author" content="Micah Clegg">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="/acme/css/screen.css" media="screen">
+ </head>
+ <body>
+  <div id="wrapper">
+   <header id="page-header">
+     <h1>Micah Clegg</h1>
+     <h2>Web Design & Development</h2>
+   </header>
+   <nav id="page-nav">
+     <a href="#" title="View the home page"
+     <a href="/assignments/w01/" title="View the assignment for Week 1" >WDD Assignment Week 01</a>
+   </nav>
+   <main>
+
+   </main>
+   <footer>
+     <p><small>&copy;Micah Clegg 2018</small></p>
+   </footer>
+  </div>
+ </body>
+
+</html>
