--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <h2>Web Design & Development</h2>
    </header>
    <nav id="page-nav">
-     <a href="#" title="View the home page"
+     <a href="#" title="View the home page">Home</a>
      <a href="/assignments/w01/" title="View the assignment for Week 1" >WDD Assignment Week 01</a>
    </nav>
    <main>
