--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Micah Clegg's home page. Web Development and Design">
   <meta name="author" content="Micah Clegg">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="/" media="screen">
+  <link rel="stylesheet" type="text/css" href="/css/main.css" media="screen">
  </head>
  <body>
   <div id="wrapper">
@@ -17,6 +17,7 @@
    <nav id="page-nav">
      <a href="#" title="View the home page">Home</a>
      <a href="/wdd331/assignments/w01/" title="View the assignment for Week 1" >WDD Assignment Week 01</a>
+     <a href="/wdd331/assignments/w03/" title="View the assignment for Week 3" >WDD Assignment Week 03</a>
    </nav>
    <main>
 
