--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
      <a href="#" title="View the home page">Home</a>
      <a href="/wdd331/assignments/w01/" title="View the assignment for Week 1" >WDD Assignment Week 01</a>
      <a href="/wdd331/assignments/w03/" title="View the assignment for Week 3" >WDD Assignment Week 03</a>
+     <a href="/zen-garden/" title="View our Zen Garden">ZEN GARDEN</a>
    </nav>
    <main>
 
