--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
    </header>
    <nav id="page-nav">
      <a href="#" title="View the home page">Home</a>
-     <a href="/wdd331/assignments/w01/" title="View the assignment for Week 1" >WDD Assignment Week 01</a>
-     <a href="/wdd331/assignments/w03/" title="View the assignment for Week 3" >WDD Assignment Week 03</a>
-     <a href="/zen-garden/" title="View our Zen Garden">ZEN GARDEN</a>
+     <a href="/wdd331/zen-garden/" title="View our Zen Garden">ZEN GARDEN</a>
    </nav>
    <main>
 
